# custom-edr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  NOTICE  Procfile  README.md  SECURITY.md  deny.toml  install.sh
.cargo/: audit.toml
.github/workflows/: backend.yml  frontend.yml  python.yml  rust.yml
agent-core/: Cargo.toml
agent-core/src/: client.rs  config.rs  enroll.rs  event.rs  integrity.rs  jobs.rs  jobs_diagnostic.rs  jobs_handlers.rs  jobs_hunt.rs  lib.rs  pii.rs  spool.rs
agent-linux/: Cargo.toml  build.rs
agent-linux/ebpf/: build.sh  edr.bpf.c  vigil.bpf.c
agent-linux/src/: capdrop.rs  command_worker.rs  ebpf.rs  hasher.rs  main.rs  proc_watcher.rs  prom.rs
agent-windows/: Cargo.toml
agent-windows/src/: allowlist.rs  driver.rs  etw.rs  main.rs  service.rs  tpm.rs
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/sigma_rules/: README.md
deploy/: docker-compose.yml  postgres-init.sql
docs/: SESSION_HANDOFF.md  agent-update-protocol.md  code-cleanup-roadmap.md  compliance-roadmap.md  detection-response-roadmap.md  install.md  m10b-dns-design.md  observability-roadmap.md  operator-guide.md  performance-scale-roadmap.md  rbac.md  telemetry-roadmap.md  threat-model.md
frontend/: eslint.config.js  node_modules  vite.config.ts
kernel-windows/: build.ps1  edr.c  edr.h  install.ps1  test-block.ps1  test-drain.ps1  test-get-stats.ps1  test-kill.ps1  vigil.c  vigil.h  vigil.inf
proto/: README.md
tools/vigil-mcp/: README.md  pyproject.toml
tools/vigil-mcp/vigil_mcp/: __init__.py  client.py  server.py
(+277 files in other folders)
